# ha-smartchain

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README-ru.md  README.md  TODO.md  hacs.json  pyproject.toml
.github/: settings.yml
.github/workflows/: cron.yaml  pull.yml  push.yml
custom_components/gigachain/: __init__.py  client_util.py  config_flow.py  const.py  conversation.py  manifest.json
custom_components/gigachain/translations/: en.json  ru.json
custom_components/smartchain/: __init__.py  ai_task.py  client_util.py  config_flow.py  const.py  conversation.py  delegate_tool.py  helpers.py  history_tool.py  manifest.json  services.yaml  skills.py  strings.json
custom_components/smartchain/panel/: services.js  smartchain-panel.js  styles.js
custom_components/smartchain/panel/components/: ai-bar.js  camera-tab.js  code-editor.js  diff-viewer.js  entity-picker.js  generate-tab.js  sidebar-explorer.js  toolbar.js  validation-panel.js  yaml-editor.js  yaml-picker.js
custom_components/smartchain/translations/: en.json  ru.json
docs/: COMPETITIVE_ANALYSIS.md  DOCUMENTATION.md  ROADMAP.md  USER_GUIDE.md
docs/blueprints/: security_guard.yaml
tests/: __init__.py  conftest.py  test_ai_task.py  test_config_flow.py  test_delegate_tool.py  test_fetch_models.py  test_history_tool.py  test_init.py  test_prompt_cache.py  test_service.py  test_setup.py  test_skills.py  test_subentries.py  test_vision.py
