[project]
name = "ha-smartchain"
version = "0.7.0"
description = "SmartChain — multi-provider LLM conversation agent for Home Assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component>=0.13",
    "ruff>=0.15",
    "langchain-core>=0.3",
    "gigachat>=0.1",
    "PyTurboJPEG>=2.0",
]
